feat: added footer

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/styles-aboutpage-squares.css">
     <link rel="stylesheet" href="styles/styles-contactpage.css">
     <link rel="stylesheet" href="styles/styles-contactpage-triangles.css">
+    <link rel="stylesheet" href="styles/styles-footer.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
@@ -226,6 +227,20 @@
                         </div>
                         
                     </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="footer-container">
+            <div class="row no-gutters">
+
+                <div class="col-12 col-sm-6 align-self-center text">
+                    <h3>© 2020 Logik</h3>
+                </div>
+
+                <div class="col-12 col-sm-6 align-self-center text">
+                    <h3>@logik.my on Instagram and Twitter.</h3>
                 </div>
 
             </div>
