style: css cleanup

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -52,12 +52,12 @@
         </div>
 
         <!-- NAVBAR FOR DESKTOP -->
-        <div class="navibar-desktop row">
-            <div class="offset-xl-1 col-4 padding-0 align-self-center navtitle-container">
+        <div class="navibar-desktop row no-gutters">
+            <div class="offset-xl-1 col-4 align-self-center navtitle-container">
                 <h1>Logik</h1>
             </div>
 
-            <div class="col-7 col-xl-5 padding-0 align-self-center">
+            <div class="col-7 col-xl-5 align-self-center">
                 <div class="row no-gutters float-right navlinks-container">
                     <a href="#HomeSection">
                         <p class="navlink-font">Home</p>
