--- a/county-frontend/index.html
+++ b/county-frontend/index.html
@@ -90,7 +90,7 @@
     <section class="about-section" id="About">
         <div class="wrapper">
             <div class="about-info">
-                <img src="/static/img/pie-chart.svg" alt="pie-chart" class="about-img" data-aos="fade-right" data-aos-duration="1000" data-aos-once=true>
+                <img src="static/img/pie-chart.svg" alt="pie-chart" class="about-img" data-aos="fade-right" data-aos-duration="1000" data-aos-once=true>
                 <div class="content" >
                     <h2 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-once=true>What is</h2>
                     <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800" data-aos-once=true>county?</h1>
@@ -116,7 +116,7 @@
                 <div class="left-column">
                     <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
                         <div class="icon-wrapper">
-                            <img src="/static/img/icons/Icon ionic-ios-rocket.svg" alt="fast-and-powerful" class="icon">
+                            <img src="static/img/icons/Icon ionic-ios-rocket.svg" alt="fast-and-powerful" class="icon">
                         </div>
                         <div class="content">
                             <h2>Fast & Powerful</h2>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200" data-aos-once=true>
                         <div class="icon-wrapper">
-                            <img src="/static/img/icons/Icon feather-book-open.svg" alt="readable-layout" class="icon">
+                            <img src="static/img/icons/Icon feather-book-open.svg" alt="readable-layout" class="icon">
                         </div>
                         <div class="content">
                             <h2>Readable Layout</h2>
@@ -138,12 +138,12 @@
                         <h2 >Features</h2>
                         <div class="rect"></div>
                     </div>
-                    <img src="/static/img/app_preview.png" alt="app-preview" class="app-preview" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1200" data-aos-once=true>
+                    <img src="static/img/app_preview.png" alt="app-preview" class="app-preview" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1200" data-aos-once=true>
                 </div>
                 <div class="right-column">
                     <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400" data-aos-once=true>
                         <div class="icon-wrapper">
-                            <img src="/static/img/icons/Icon ionic-ios-stats.svg" alt="useful-statistics" class="icon">
+                            <img src="static/img/icons/Icon ionic-ios-stats.svg" alt="useful-statistics" class="icon">
                         </div>
                         <div class="content">
                             <h2>Useful Statistics</h2>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" data-aos-once=true>
                         <div class="icon-wrapper">
-                            <img src="/static/img/icons/Icon feather-cloud.svg" alt="cloud-storage" class="icon">
+                            <img src="static/img/icons/Icon feather-cloud.svg" alt="cloud-storage" class="icon">
                         </div>
                         <div class="content">
                             <h2>Cloud Storage</h2>
@@ -176,7 +176,7 @@
             <div class="blog-main-grid">
                 <div class="main-article-grid" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200" data-aos-once=true>
                     <div class="img-child">
-                        <img src="/static/img/stock-market.png" alt="" class="featured-image">
+                        <img src="static/img/stock-market.png" alt="" class="featured-image">
                     </div>
                     
                     <div class="info-child">
@@ -189,18 +189,18 @@
 
                         <div class="date-time">
                             <div class="date-grid">
-                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <img src="static/img/icons/calendar.svg" alt="" class="icon">
                                 <p class="text">19.04.2020</p>
                             </div>
                             <div class="time-grid">
-                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <img src="static/img/icons/clock.svg" alt="" class="icon">
                                 <p class="text">2.47p.m</p>
                             </div>
                         </div>
 
                         <div class="view-article-grid">
                             <p class="text">VIEW ARTICLE</p>
-                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                            <img src="static/img/icons/arrow-right.svg" alt="" class="icon">
                         </div>
                     </div>
                 </div>
@@ -213,18 +213,18 @@
 
                         <div class="date-time">
                             <div class="date-grid">
-                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <img src="static/img/icons/calendar.svg" alt="" class="icon">
                                 <p class="text">19.04.2020</p>
                             </div>
                             <div class="time-grid">
-                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <img src="static/img/icons/clock.svg" alt="" class="icon">
                                 <p class="text">2.47p.m</p>
                             </div>
                         </div>
 
                         <div class="view-article-grid">
                             <p class="text"></p>
-                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                            <img src="static/img/icons/arrow-right.svg" alt="" class="icon">
                         </div>
                     </div>
 
@@ -235,18 +235,18 @@
 
                         <div class="date-time">
                             <div class="date-grid">
-                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <img src="static/img/icons/calendar.svg" alt="" class="icon">
                                 <p class="text">19.04.2020</p>
                             </div>
                             <div class="time-grid">
-                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <img src="static/img/icons/clock.svg" alt="" class="icon">
                                 <p class="text">2.47p.m</p>
                             </div>
                         </div>
 
                         <div class="view-article-grid">
                             <p class="text"></p>
-                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                            <img src="static/img/icons/arrow-right.svg" alt="" class="icon">
                         </div>
                     </div>
 
@@ -257,18 +257,18 @@
 
                         <div class="date-time">
                             <div class="date-grid">
-                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <img src="static/img/icons/calendar.svg" alt="" class="icon">
                                 <p class="text">19.04.2020</p>
                             </div>
                             <div class="time-grid">
-                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <img src="static/img/icons/clock.svg" alt="" class="icon">
                                 <p class="text">2.47p.m</p>
                             </div>
                         </div>
 
                         <div class="view-article-grid">
                             <p class="text"></p>
-                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                            <img src="static/img/icons/arrow-right.svg" alt="" class="icon">
                         </div>
                     </div>
                 </div>
@@ -337,11 +337,11 @@
                 </div>
 
                 <div class="social-media">
-                    <img src="/static/img/icons/instagram.svg" alt="instagram">
-                    <img src="/static/img/icons/pinterest.svg" alt="pinterest">
-                    <img src="/static/img/icons/facebook.svg" alt="facebook">
-                    <img src="/static/img/icons/twitter.svg" alt="twitter">
-                    <img src="/static/img/icons/youtube.svg" alt="youtube">
+                    <img src="static/img/icons/instagram.svg" alt="instagram">
+                    <img src="static/img/icons/pinterest.svg" alt="pinterest">
+                    <img src="static/img/icons/facebook.svg" alt="facebook">
+                    <img src="static/img/icons/twitter.svg" alt="twitter">
+                    <img src="static/img/icons/youtube.svg" alt="youtube">
                 </div>
             </div>
         </div>
