--- a/destination-frontend/index.html
+++ b/destination-frontend/index.html
@@ -7,8 +7,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/destination-frontend/static/css/global.css">
-    <link rel="stylesheet" href="/destination-frontend/static/css/icons.css">
+    <link rel="stylesheet" href="static/css/global.css">
+    <link rel="stylesheet" href="static/css/icons.css">
 
 </head>
 <body>
@@ -16,23 +16,23 @@
 
       <!-- OVERLAY ICONS -->
       <a href="#">
-        <img class="menu-icon" src="/destination-frontend/static/img/icons/menu.svg" alt="Menu">
+        <img class="menu-icon" src="static/img/icons/menu.svg" alt="Menu">
       </a>
       
       <div class="social-icon-container">
         <div class="social-icon-wrapper">
-          <img src="/destination-frontend/static/img/icons/facebook.svg" alt="Facebook">
+          <img src="static/img/icons/facebook.svg" alt="Facebook">
         </div>
         <div class="social-icon-wrapper">
-          <img src="/destination-frontend/static/img/icons/twitter.svg" alt="Twitter">
+          <img src="static/img/icons/twitter.svg" alt="Twitter">
         </div>
         <div class="social-icon-wrapper">
-          <img src="/destination-frontend/static/img/icons/instagram.svg" alt="Instagram">
+          <img src="static/img/icons/instagram.svg" alt="Instagram">
         </div>
       </div>
 
       <div class="phone-icon">
-        <img src="/destination-frontend/static/img/icons/phone.svg" alt="Contact">
+        <img src="static/img/icons/phone.svg" alt="Contact">
       </div>
 
         <div id="carouselExampleIndicators" class="carousel slide carousel-setting" data-ride="carousel">
@@ -43,18 +43,18 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block img-setting" src="/destination-frontend/static/img/paris.jpg" alt="PARIS">
+                <img class="d-block img-setting" src="static/img/paris.jpg" alt="PARIS">
                 <div class="content-container d-flex flex-column">
                   <div class="content-background"></div>
                   <h2>PARIS</h2>
                   <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   <p class="rating-style">23,450 ratings</p>
                   <div class="rating-icon-wrapper d-flex">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
                   </div>
 
                   <a href="#">
@@ -65,18 +65,18 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block img-setting" src="/destination-frontend/static/img/rome.jpg" alt="ROME">
+                <img class="d-block img-setting" src="static/img/rome.jpg" alt="ROME">
                 <div class="content-container d-flex flex-column">
                   <div class="content-background"></div>
                   <h2>ROME</h2>
                   <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   <p class="rating-style">50,203 ratings</p>
                   <div class="rating-icon-wrapper d-flex">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-empty.svg" alt="Empty star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-empty.svg" alt="Empty star">
                   </div>
 
                   <a href="#">
@@ -87,18 +87,18 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block img-setting" src="/destination-frontend/static/img/maui.jpg" alt="MAUI">
+                <img class="d-block img-setting" src="static/img/maui.jpg" alt="MAUI">
                 <div class="content-container d-flex flex-column">
                   <div class="content-background"></div>
                   <h2>MAUI</h2>
                   <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   <p class="rating-style">10,394 ratings</p>
                   <div class="rating-icon-wrapper d-flex">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
-                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-half.svg" alt="Half star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="static/img/icons/star-half.svg" alt="Half star">
                   </div>
 
                   <a href="#">
@@ -112,13 +112,13 @@
 
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <div class="carousel-arrow-wrapper d-flex justify-content-center align-items-center">
-                <img class="arrow-icon"  aria-hidden="true" src="/destination-frontend/static/img/icons/arrow-left.svg" alt="Previous Destination">
+                <img class="arrow-icon"  aria-hidden="true" src="static/img/icons/arrow-left.svg" alt="Previous Destination">
                 <span class="sr-only">Previous</span>
               </div>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
               <div class="carousel-arrow-wrapper d-flex justify-content-center align-items-center">
-                <img class="arrow-icon"  aria-hidden="true" src="/destination-frontend/static/img/icons/arrow-right.svg" alt="Previous Destination">
+                <img class="arrow-icon"  aria-hidden="true" src="static/img/icons/arrow-right.svg" alt="Previous Destination">
                 <span class="sr-only">Next</span>
               </div>
             </a>
